--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,14 +1,10 @@
-gradle-wrapper.jar
-/.gradle
-/captures/
-/gradlew
-/gradlew.bat
-/local.properties
-GeneratedPluginRegistrant.java
-.cxx/
-
-# Remember to never publicly share your keystore.
-# See https://flutter.dev/to/reference-keystore
-key.properties
-**/*.keystore
-**/*.jks
+**/build/
+**/android/.gradle/
+**/android/app/build/
+**/.dart_tool/
+**/.idea/
+**/.vscode/
+**/ios/Pods/
+**/ios/.symlinks/
+**/ios/Flutter/Flutter.framework
+location_model.g.dart
