--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,14 @@
 name: location_tracker
 description: "Background location tracker app"
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.1
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.8
   background_locator_2: ^2.0.6
   permission_handler: ^11.3.0
   geolocator: ^10.1.0
@@ -19,10 +17,13 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.2
   latlong2: ^0.8.1
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.3.3
+  hive_generator: ^2.0.0
   flutter_lints: ^5.0.0
 
 flutter:
